samples/_failures_safe/1761550897_a8d20c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c616e2a8.c: In function ‘dfs’:
./samples/SAFE/__tmp_c616e2a8.c:177:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  177 |     struct Vertex* start
      |            ^~~~~~
./samples/SAFE/__tmp_c616e2a8.c:177:12: error: expected declaration or statement at end of input
